--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.34'
     compileOnly 'com.github.MilkBowl:VaultAPI:1.7.1'
     compileOnly 'org.black_ixx:playerpoints:3.2.5'
+    compileOnly 'me.clip:placeholderapi:2.11.5'
 }
 
 java {
