--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ main: com.essencecore.EssenceCore
 api-version: '1.21'
 author: EssenceCore
 description: Highly customizable essence system with unique powers
-softdepend: [Vault, PlayerPoints]
+softdepend: [Vault, PlayerPoints, PlaceholderAPI]
 
 commands:
   essence:
