Fix up the inventory & how it handles logic

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -23,7 +23,12 @@ messages:
   already-has-essence: "&cYou already have this essence active!"
   one-essence-only: "&cYou can only have one essence! Use /essence remove first."
   insufficient-funds: "&cYou don't have enough {currency} to switch essences! Required: &e{cost}"
+  insufficient-points: "&cYou don't have enough credits! Required: &e{cost} &7(You have: {points})"
   ability-cooldown: "&cAbility on cooldown! &7({time}s remaining)"
   in-combat: "&cYou cannot use this ability while in combat!"
   outside-region: "&cYou cannot use this ability outside the allowed region!"
   config-reloaded: "&aConfiguration reloaded successfully!"
+  trial-started: "&aYou have started a &e1 hour free trial &aof {essence}&a! Enjoy!"
+  trial-expired: "&cYour free trial has expired!"
+  trial-expired-info: "&7Purchase an essence with /essence to continue using it!"
+  essence-purchased: "&aYou have purchased {essence} &afor &e{cost} credits&a!"
