--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,13 +18,13 @@ settings:
 messages:
   essence-given: "&aYou have received the {essence}&a!"
   essence-removed: "&cYour essence has been removed!"
-  essence-switched: "&aYou have switched to {essence}&a! Cost: &e{cost}"
+  essence-switched-paid: "&aYou have switched to {essence}&a! Cost: &e{cost}"
+  essence-switched-trial: "&aYou switched to {essence}&a! &7(Free trial continues)"
   no-permission: "&cYou don't have permission to use this essence!"
   already-has-essence: "&cYou already have this essence active!"
-  essence-switched: "&aYou switched to {essence}! &7(Free trial continues)"
   one-essence-only: "&cYou can only have one essence! Use /essence remove first."
   insufficient-funds: "&cYou don't have enough {currency} to switch essences! Required: &e{cost}"
-  insufficient-points: "&cYou don't have enough credits! Required: &e{cost} &7(You have: {points})"
+  insufficient-credits: "&cYou don't have enough credits! Required: &e{cost} &7(You have: {current})"
   ability-cooldown: "&cAbility on cooldown! &7({time}s remaining)"
   in-combat: "&cYou cannot use this ability while in combat!"
   outside-region: "&cYou cannot use this ability outside the allowed region!"
